# ami-contests

./: .gitignore  newfile.py
algo1/contest1/: B.py  C.py  D.py  E.py  F.py  input.txt
algo2/contest1/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
algo2/contest10/: B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp
algo2/contest11/: C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
algo2/contest12/: C.cpp  CMakeLists.txt  F.cpp  G.cpp
algo2/contest13/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
algo2/contest14/: A.cpp  B.cpp  B_tl.cpp  C.cpp  CMakeLists.txt  D.cpp  F.cpp
algo2/contest2/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  (+5 more)
algo2/contest9/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  J.cpp  main.cpp
algo3/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
contest1/: 11.cpp  13.cpp  2.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  M.cpp
contest2/: 11.cpp  CMakeLists.txt  D.cpp  E.cpp  H.cpp  N.cpp
contest3/: CMakeLists.txt  D.cpp  F.cpp  L.cpp  M.cpp
contest4/: CMakeLists.txt  E.cpp  H.cpp  J.cpp  L.cpp  O.cpp
contest5/: A.cpp  CMakeLists.txt  D.cpp  H.cpp  N.cpp  O.cpp  P.cpp
contest6/: A.cpp  ABCDE.cpp  CMakeLists.txt
contest7/: B.cpp  CMakeLists.txt  E.cpp  I.cpp  K.cpp  M.cpp  address.h  animals.h
contest8/: B.cpp  CMakeLists.txt  D.cpp  F.cpp  H.cpp
cw1/: D.cpp
cw2/: D.cpp  E.cpp
cw3/: D.cpp
oimp/contest2/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  F.cpp  G.cpp  I.cpp  J.cpp  L.cpp  M.cpp  N.cpp
yandex/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  generator.py
(+150 files in other folders)
