cmake_minimum_required(VERSION 3.15)
project(contest2)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror --std=c++17 -g ${CMAKE_CXX_FLAGS}")

add_executable(2 2.cpp)

add_executable(3 3.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(8 8.cpp)
add_executable(7 7.cpp)
add_executable(1 1.cpp)
add_executable(9 9.cpp)
add_executable(12 12.cpp)