cmake_minimum_required(VERSION 3.15)
project(contest9)

set(CMAKE_CXX_STANDARD 20)

add_executable(contest9 main.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)
add_executable(G G.cpp)
add_executable(J J.cpp)
add_executable(H H.cpp)